<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rc_30"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_clear_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:text="@string/clear_dialog_title"
        android:textAppearance="@style/TextAppearance.Perfect.DialogTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp">

            <CheckBox
                android:id="@+id/dialog_clear_events_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_events_option"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <CheckBox
                android:id="@+id/dialog_clear_focus_records_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_focus_records_option"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <CheckBox
                android:id="@+id/dialog_clear_plans_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_plans_option"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <CheckBox
                android:id="@+id/dialog_clear_summary_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_summary_option"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/dialog_btn_bar" />
</LinearLayout>