<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rc_tl30_tr30"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="20dp">

    <include layout="@layout/dialog_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_event_title_content_et"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:hint="@string/event_title"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent"
                tools:ignore="Autofill" />

            <View
                android:id="@+id/dialog_event_title_start_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/dialog_event_title_content_et"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/dialog_event_start_title_tv"
                android:layout_width="100dp"
                android:layout_height="54dp"
                android:layout_below="@id/dialog_event_title_start_divider"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/event_start"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <TextView
                android:id="@+id/dialog_event_start_content_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignTop="@id/dialog_event_start_title_tv"
                android:layout_alignBottom="@id/dialog_event_start_title_tv"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/dialog_event_start_title_tv"
                android:background="@drawable/bg_btn_rc_8"
                android:gravity="center_vertical|end"
                android:paddingHorizontal="6dp"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContentSecondary" />

            <View
                android:id="@+id/dialog_event_start_duration_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/dialog_event_start_title_tv"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/dialog_event_duration_title_tv"
                android:layout_width="100dp"
                android:layout_height="54dp"
                android:layout_below="@id/dialog_event_start_duration_divider"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/event_duration"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <TextView
                android:id="@+id/dialog_event_duration_content_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignTop="@id/dialog_event_duration_title_tv"
                android:layout_alignBottom="@id/dialog_event_duration_title_tv"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/dialog_event_duration_title_tv"
                android:background="@drawable/bg_btn_rc_8"
                android:gravity="center_vertical|end"
                android:paddingHorizontal="6dp"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContentSecondary" />

            <View
                android:id="@+id/dialog_event_duration_repeat_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/dialog_event_duration_title_tv"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/dialog_event_repeat_title_tv"
                android:layout_width="100dp"
                android:layout_height="54dp"
                android:layout_below="@id/dialog_event_duration_repeat_divider"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/event_repeat"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent" />

            <TextView
                android:id="@+id/dialog_event_repeat_content_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignTop="@id/dialog_event_repeat_title_tv"
                android:layout_alignBottom="@id/dialog_event_repeat_title_tv"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/dialog_event_repeat_title_tv"
                android:background="@drawable/bg_btn_rc_8"
                android:gravity="center_vertical|end"
                android:paddingHorizontal="6dp"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContentSecondary" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>