<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rc_tl30_tr30"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="20dp">

    <include layout="@layout/dialog_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dialog_summary_thumb_up_iv1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/dialog_summary_thumb_up_iv2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/dialog_summary_thumb_up_iv3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/dialog_summary_thumb_up_iv4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/dialog_summary_thumb_up_iv5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/summary_rating_tip"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContentTooltip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginVertical="15dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/dialog_summary_review_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/summary_review_hint"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginVertical="15dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/dialog_summary_memo_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/summary_memo_hint"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.Perfect.DialogContent"
                tools:ignore="Autofill" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>